add gene/module-braintree version 4.0.4

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
         "ext-xsl": "*",
         "ext-zip": "*",
         "lib-libxml": "*",
-        "braintree/braintree_php": "3.35.0",
         "colinmollenhour/cache-backend-file": "~1.4.1",
         "colinmollenhour/cache-backend-redis": "1.10.6",
         "colinmollenhour/credis": "1.10.0",
@@ -102,10 +101,25 @@
         "ext-pcntl": "Need for run processes in parallel mode"
     },
     "replace": {
-        "magento/module-marketplace": "100.3.4",
+        "blueimp/jquery-file-upload": "5.6.14",
+        "components/jquery": "1.11.0",
+        "components/jqueryui": "1.10.4",
+        "gene/module-braintree": "4.0.4",
+        "magento/framework": "102.0.5-p2",
+        "magento/framework-amqp": "100.3.5",
+        "magento/framework-bulk": "100.3.5",
+        "magento/framework-message-queue": "100.3.5",
+        "magento/language-de_de": "100.3.4",
+        "magento/language-en_us": "100.3.4",
+        "magento/language-es_es": "100.3.4",
+        "magento/language-fr_fr": "100.3.4",
+        "magento/language-nl_nl": "100.3.4",
+        "magento/language-pt_br": "100.3.4",
+        "magento/language-zh_hans_cn": "100.3.4",
         "magento/module-admin-analytics": "100.3.2",
         "magento/module-admin-notification": "100.3.5",
         "magento/module-advanced-pricing-import-export": "100.3.4",
+        "magento/module-advanced-search": "100.3.4",
         "magento/module-amqp": "100.3.4",
         "magento/module-amqp-store": "100.3.1",
         "magento/module-analytics": "100.3.5",
@@ -115,11 +129,8 @@
         "magento/module-authorizenet-acceptjs": "100.3.4",
         "magento/module-authorizenet-cardinal": "100.3.1",
         "magento/module-authorizenet-graph-ql": "100.3.2",
-        "magento/module-advanced-search": "100.3.4",
         "magento/module-backend": "101.0.5-p2",
         "magento/module-backup": "100.3.5",
-        "magento/module-braintree": "100.3.5",
-        "magento/module-braintree-graph-ql": "100.3.2",
         "magento/module-bundle": "100.3.5-p2",
         "magento/module-bundle-graph-ql": "100.3.4",
         "magento/module-bundle-import-export": "100.3.4",
@@ -127,8 +138,10 @@
         "magento/module-captcha": "100.3.5",
         "magento/module-cardinal-commerce": "100.3.2",
         "magento/module-catalog": "103.0.5-p2",
-        "magento/module-catalog-customer-graph-ql": "100.3.0",
         "magento/module-catalog-analytics": "100.3.4",
+        "magento/module-catalog-cms-graph-ql": "100.3.0",
+        "magento/module-catalog-customer-graph-ql": "100.3.0",
+        "magento/module-catalog-graph-ql": "100.3.5",
         "magento/module-catalog-import-export": "101.0.5-p2",
         "magento/module-catalog-inventory": "100.3.5",
         "magento/module-catalog-inventory-graph-ql": "100.3.4",
@@ -136,23 +149,29 @@
         "magento/module-catalog-rule-configurable": "100.3.5",
         "magento/module-catalog-search": "101.0.5",
         "magento/module-catalog-url-rewrite": "100.3.5",
+        "magento/module-catalog-url-rewrite-graph-ql": "100.3.5",
         "magento/module-catalog-widget": "100.3.5",
         "magento/module-checkout": "100.3.5-p2",
         "magento/module-checkout-agreements": "100.3.5",
         "magento/module-checkout-agreements-graph-ql": "100.3.1",
         "magento/module-cms": "103.0.5-p2",
+        "magento/module-cms-graph-ql": "100.3.4",
         "magento/module-cms-url-rewrite": "100.3.4",
+        "magento/module-cms-url-rewrite-graph-ql": "100.3.4",
         "magento/module-config": "101.1.5",
         "magento/module-configurable-import-export": "100.3.4",
         "magento/module-configurable-product": "100.3.5-p2",
+        "magento/module-configurable-product-graph-ql": "100.3.5",
         "magento/module-configurable-product-sales": "100.3.4",
         "magento/module-contact": "100.3.5",
         "magento/module-cookie": "100.3.5",
         "magento/module-cron": "100.3.5",
+        "magento/module-csp": "100.3.0",
         "magento/module-currency-symbol": "100.3.5",
         "magento/module-customer": "102.0.5-p2",
         "magento/module-customer-analytics": "100.3.4",
         "magento/module-customer-downloadable-graph-ql": "100.3.0",
+        "magento/module-customer-graph-ql": "100.3.5",
         "magento/module-customer-import-export": "100.3.5",
         "magento/module-deploy": "100.3.4",
         "magento/module-developer": "100.3.5",
@@ -163,6 +182,7 @@
         "magento/module-downloadable-graph-ql": "100.3.4",
         "magento/module-downloadable-import-export": "100.3.5",
         "magento/module-eav": "102.0.5-p2",
+        "magento/module-eav-graph-ql": "100.3.4",
         "magento/module-elasticsearch": "100.3.5",
         "magento/module-elasticsearch-6": "100.3.4",
         "magento/module-elasticsearch-7": "100.3.0",
@@ -175,27 +195,16 @@
         "magento/module-google-optimizer": "100.3.4",
         "magento/module-graph-ql": "100.3.5",
         "magento/module-graph-ql-cache": "100.3.2",
-        "magento/module-catalog-graph-ql": "100.3.5",
-        "magento/module-catalog-cms-graph-ql": "100.3.0",
-        "magento/module-catalog-url-rewrite-graph-ql": "100.3.5",
-        "magento/module-configurable-product-graph-ql": "100.3.5",
-        "magento/module-customer-graph-ql": "100.3.5",
-        "magento/module-eav-graph-ql": "100.3.4",
-        "magento/module-swatches-graph-ql": "100.3.5",
-        "magento/module-tax-graph-ql": "100.3.4",
-        "magento/module-url-rewrite-graph-ql": "100.3.5",
-        "magento/module-cms-url-rewrite-graph-ql": "100.3.4",
-        "magento/module-weee-graph-ql": "100.3.4",
-        "magento/module-cms-graph-ql": "100.3.4",
+        "magento/module-grouped-catalog-inventory": "100.3.3",
         "magento/module-grouped-import-export": "100.3.4",
         "magento/module-grouped-product": "100.3.5-p2",
-        "magento/module-grouped-catalog-inventory": "100.3.3",
         "magento/module-grouped-product-graph-ql": "100.3.4",
         "magento/module-import-export": "100.3.5-p2",
         "magento/module-indexer": "100.3.5-p2",
         "magento/module-instant-purchase": "100.3.5",
         "magento/module-integration": "100.3.5",
         "magento/module-layered-navigation": "100.3.4",
+        "magento/module-marketplace": "100.3.4",
         "magento/module-media-gallery": "100.3.1",
         "magento/module-media-gallery-api": "100.3.0",
         "magento/module-media-storage": "100.3.5",
@@ -249,15 +258,19 @@
         "magento/module-swagger-webapi": "100.3.4",
         "magento/module-swagger-webapi-async": "100.3.4",
         "magento/module-swatches": "100.3.5",
+        "magento/module-swatches-graph-ql": "100.3.5",
         "magento/module-swatches-layered-navigation": "100.3.4",
         "magento/module-tax": "100.3.5",
+        "magento/module-tax-graph-ql": "100.3.4",
         "magento/module-tax-import-export": "100.3.4",
         "magento/module-theme": "101.0.5-p2",
         "magento/module-theme-graph-ql": "100.3.3",
+        "magento/module-tinymce-3": "100.3.5",
         "magento/module-translation": "100.3.5",
         "magento/module-ui": "101.1.5",
         "magento/module-ups": "100.3.5",
         "magento/module-url-rewrite": "101.1.5",
+        "magento/module-url-rewrite-graph-ql": "100.3.5",
         "magento/module-user": "101.1.5",
         "magento/module-usps": "100.3.5",
         "magento/module-variable": "100.3.4",
@@ -268,32 +281,17 @@
         "magento/module-webapi-async": "100.3.5",
         "magento/module-webapi-security": "100.3.4",
         "magento/module-weee": "100.3.5",
+        "magento/module-weee-graph-ql": "100.3.4",
         "magento/module-widget": "101.1.4",
         "magento/module-wishlist": "101.1.5-p2",
-        "magento/module-wishlist-graph-ql": "100.3.3",
         "magento/module-wishlist-analytics": "100.3.4",
+        "magento/module-wishlist-graph-ql": "100.3.3",
         "magento/theme-adminhtml-backend": "100.3.5",
         "magento/theme-frontend-blank": "100.3.5",
         "magento/theme-frontend-luma": "100.3.5",
-        "magento/language-de_de": "100.3.4",
-        "magento/language-en_us": "100.3.4",
-        "magento/language-es_es": "100.3.4",
-        "magento/language-fr_fr": "100.3.4",
-        "magento/language-nl_nl": "100.3.4",
-        "magento/language-pt_br": "100.3.4",
-        "magento/language-zh_hans_cn": "100.3.4",
-        "magento/framework": "102.0.5-p2",
-        "magento/framework-amqp": "100.3.5",
-        "magento/framework-bulk": "100.3.5",
-        "magento/framework-message-queue": "100.3.5",
-        "trentrichardson/jquery-timepicker-addon": "1.4.3",
-        "components/jquery": "1.11.0",
-        "blueimp/jquery-file-upload": "5.6.14",
-        "components/jqueryui": "1.10.4",
-        "twbs/bootstrap": "3.1.0",
         "tinymce/tinymce": "3.4.7",
-        "magento/module-tinymce-3": "100.3.5",
-        "magento/module-csp": "100.3.0"
+        "trentrichardson/jquery-timepicker-addon": "1.4.3",
+        "twbs/bootstrap": "3.1.0"
     },
     "conflict": {
         "gene/bluefoot": "*"
